bootstrapped polymer element loading for ops sister ;)

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <!-- endinject -->
     <!-- endbuild -->
   </head>
-  <body>
+  <body fullbleed unresolved>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -31,12 +31,29 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
+    <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" 
+      href="../bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" 
+      href="../bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" 
+      href="../bower_components/core-icons/core-icons.html">
+    <link rel="import" 
+      href="../bower_components/paper-icon-button/paper-icon-button.html">
 
+    <!-- build:js(src) scripts/vendor.js -->
+    
+    <!-- endbuild -->
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script src="../bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="../bower_components/angular-touch/angular-touch.js"></script>
+    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="../bower_components/restangular/dist/restangular.js"></script>
+    <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="../bower_components/traceur-runtime/traceur-runtime.js"></script>
+    <script src="../bower_components/ng-polymer-elements/ng-polymer-elements.js"></script>
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
     <!-- js files will be automaticaly insert here -->
